Fix java9 test setup